<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_selector"
        android:checked="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_data_selector"
        android:title="@string/title_order" />
    <item
        android:id="@+id/navigation_notice"
        android:icon="@drawable/ic_notice_selector"
        android:title="@string/title_notice" />
    <item
        android:id="@+id/navigation_performance"
        android:icon="@drawable/ic_order_selector"
        android:title="@string/title_performance" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_mine_selector"
        android:title="@string/title_mine" />

</menu>